# pydantic-ai-history-processor

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: main.yml
pydantic_ai_history_processor/: compactor.py  compactor_system_prompt.md  log.py  main.py  patcher.py  utils.py
tests/: test_compact.py
